@@ -59,6 +59,9 @@ Unreleased changes (1.0-dev)
 
 18. Upgrade to Lucene 2.2.0 and Hadoop 0.12.3. (ab)
 
+19. NUTCH-468 - Scoring filter should distribute score to all outlinks at 
+    once. (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
